Added extra information and stylistic changes

--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,17 @@
     padding-left: 10%;
 }
 
+.infoFont{
+    font-size: large;
+}
+
 .gridStyle{
     padding-left: 10%;
     padding-right: 10%;
+}
+
+.centerAvatar{
+    text-align: center;
 }
 
 .white{
